--- a/system-tests-frontend/src/app/app.component.html
+++ b/system-tests-frontend/src/app/app.component.html
@@ -1,5 +1,3 @@
-<div class="bootstrap-wrapper">
-  <div class="container">
-    <h1>Welcome to Tests Portal!</h1>
-  </div>
-</div>
+<router-outlet></router-outlet>
+<app-navbar></app-navbar>
+<app-signup></app-signup>
