add/initial_login_&_home

--- a/system-tests-frontend/src/app/pages/signup/signup.component.html
+++ b/system-tests-frontend/src/app/pages/signup/signup.component.html
@@ -42,7 +42,7 @@
                     </mat-form-field>
 
                     <div class="container text-center">
-                        <button type="submit" [disabled]="form.invalid" class="btn btn-outline-success">OK</button>
+                        <button type="submit" [disabled]="form.invalid" class="btn btn-outline-success">Accept</button>
                         <button type="reset" class="ml-4 btn btn-outline-info">Clean</button>
                     </div>
                 </form>
