--- a/system-tests-frontend/src/app/pages/login/login.component.html
+++ b/system-tests-frontend/src/app/pages/login/login.component.html
@@ -1,1 +1,32 @@
-<p>login works!</p>
+<div class="bootstrap-wrapper">
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                <mat-card class="p-5 border border-info">
+                    <div class="container text-center">
+                        <img src="../../../assets/login.png" width="100" height="100"/>
+                    </div>
+
+                    <h1 class="text-center">Log In</h1>
+
+                    <form>
+                        <mat-form-field class="w-100 mb-1" appearance="outline">
+                            <mat-label>Username</mat-label>
+                            <input formControlName="username" maxlength="25" matInput placeholder="Enter your username">
+                        </mat-form-field>
+
+                        <mat-form-field class="w-100 mb-4" appearance="outline">
+                            <mat-label>Password</mat-label>
+                            <input formControlName="password" type="password" minlength="8" maxlength="40" matInput placeholder="Enter your password">
+                        </mat-form-field>
+
+                        <div class="container text-center">
+                            <button type="submit" class="btn btn-outline-success">Log in</button>
+                            <button type="reset" class="ml-4 btn btn-outline-info">Clean</button>
+                        </div>
+                    </form>
+                </mat-card>
+            </div>
+        </div>
+    </div>
+</div>
