--- a/system-tests-frontend/src/app/pages/home/home.component.html
+++ b/system-tests-frontend/src/app/pages/home/home.component.html
@@ -1,2 +1,10 @@
-<h1>WELCOME TO TESTS PORTAL! ENJOY IT</h1>
-<button class="btn btn-info" >Start</button>
+<div class="bootstrap-wrapper">
+    <div class="container">
+        <div class="row mt-2">
+            <div class="col-md-6 offset-md-3 text-center">
+                <h1>WELCOME TO TESTS PORTAL! ENJOY IT</h1>
+                <button class="btn btn-info">Start</button>
+            </div>
+        </div>
+    </div>
+</div>
